# lab-camera-pose

./: .gitignore  CMakeLists.txt  LICENSE  README.md  attitude.cpp  attitude.h  camera_pose_lab.cpp  camera_pose_lab.h  cartesian_position.cpp  cartesian_position.h  conanfile.py  dataset.cpp  dataset.h  geodetic_position.cpp  geodetic_position.h  intrinsics.cpp  intrinsics.h  lab_5.cpp  lab_5.h  local_coordinate_system.cpp  local_coordinate_system.h  main.cpp  perspective_camera_model.cpp  perspective_camera_model.h  viewer_3d.cpp  viewer_3d.h
.devcontainer/: devcontainer.json
data/: 110608_Oslo_0502.txt  110608_Oslo_0503.txt  110608_Oslo_0504.txt  110608_Oslo_0505.txt  110608_Oslo_0506.txt  110608_Oslo_0507.txt  110608_Oslo_0508.txt  110608_Oslo_0509.txt  110608_Oslo_0510.txt  110608_Oslo_0511.txt  110608_Oslo_0512.txt  110608_Oslo_0513.txt  110608_Oslo_0514.txt  110608_Oslo_0515.txt  110608_Oslo_0516.txt  110608_Oslo_0517.txt  110608_Oslo_0518.txt  110608_Oslo_0519.txt  110608_Oslo_0520.txt  110608_Oslo_0521.txt  110608_Oslo_0522.txt  110608_Oslo_0523.txt  110608_Oslo_0524.txt  110608_Oslo_0525.txt  110608_Oslo_0526.txt  110608_Oslo_0527.txt  110608_Oslo_0528.txt  110608_Oslo_0529.txt  110608_Oslo_0530.txt  110608_Oslo_0531.txt  110608_Oslo_0532.txt  110608_Oslo_0533.txt  110608_Oslo_0534.txt  110608_Oslo_0535.txt  110608_Oslo_0536.txt  110608_Oslo_0537.txt  110608_Oslo_0538.txt  110608_Oslo_0539.txt  110608_Oslo_0540.txt  110608_Oslo_0541.txt  (+70 more)
lab-guide/: 1-get-an-overview.md  2-from-geographical-coordinates-to-pixels.md
